kubernetes/apps/default/paperless-ngx/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  labels:
    app: paperless-ngx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless-ngx
  template:
    metadata:
      labels:
        app: paperless-ngx
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
            - name: consume
              mountPath: /usr/src/paperless/consume
            - name: export
              mountPath: /usr/src/paperless/export
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data-pvc
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media-pvc
        - name: consume
          persistentVolumeClaim:
            claimName: paperless-consume-pvc
        - name: export
          persistentVolumeClaim:
            claimName: paperless-export-pvc
