kubernetes/apps/default/paperless-ngx/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
spec:
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: paperless-ngx
